...
                ),
                child: Column(
                  // mainAxisAlignment: MainAxisAlignment.end,
                  children: <Widget>[
                    Container(
                      child: InkWell(
                          key: Key('editProfileButton'),
                          onTap: () {
                            setState(() {
                              is_edit = true;
                            });
                          },
                          child: Icon(
...
                            mainAxisAlignment: MainAxisAlignment.end,
                            children: [
                              Container(
                                  child: Text('${_user.Name}',
                                      style: TextStyle(
                                          color: Colors.black, fontSize: 18),
                                      key: Key('profileName'))),
                              SizedBox(
                                width: 10,
                              ),
                              Container(
                                  child: new Text(
                                ':الاسم',
...
                            children: [
                              is_edit == true
                                  ? Expanded(
                                      child: Padding(
                                        padding: EdgeInsets.only(left: 10),
                                        child: TextFormField(
                                          key: Key('editEmailField'),
                                          controller: myController,
                                          validator: (String? value) {
                                            bool emailValid = RegExp(
                                                    r"^[a-zA-Z0-9.a-zA-Z0-9.!#$%&'*+-/=?^_`{|}~]+@[a-zA-Z0-9]+\.[a-zA-Z]+")
                                                .hasMatch(myController.text);
                                            if (myController.text.isEmpty)
...
                                  mainAxisAlignment: MainAxisAlignment.center,
                                  children: [
                                    Container(
                                        padding: EdgeInsets.all(5),
                                        width: 100,
                                        child: ElevatedButton(
                                          key: Key('confirmEmailChanges'),
                                          child: Text(
                                            "حفظ",
                                            style: TextStyle(
                                                fontFamily: 'Poppins',
                                                fontWeight: FontWeight.w600,
                                                color: Color(0xFF46494D)),
...
                                          ),
                                        )),
                                    Container(
                                        padding: EdgeInsets.all(5),
                                        width: 100,
                                        child: ElevatedButton(
                                          key: Key('disConfirmEmailChanges'),
                                          child: Text(
                                            "تراجع",
                                            style: TextStyle(
                                                fontFamily: 'Poppins',
                                                fontWeight: FontWeight.w600,
                                                color: Color(0xFF46494D)),
...
                      ],
                    ),
                    Container(
                        padding: EdgeInsets.all(5),
                        width: 150,
                        child: ElevatedButton(
                          key: Key('logOutButton'),
                          child: Text(
                            "تسجيل خروج",
                            style: TextStyle(
                                fontFamily: 'Poppins',
                                fontWeight: FontWeight.w600,
                                color: Color(0xFF46494D)),
...
                                content: Text(
                                  'هل أنت متأكد من تسجيل الخروج؟',
                                  textAlign: TextAlign.right,
                                ),
                                actions: [
                                  ElevatedButton(
                                    key: Key('confirmlogout'),
                                    child: Text(
                                      "نعم",
                                      style: TextStyle(
                                          fontFamily: 'Poppins',
                                          fontWeight: FontWeight.w600,
                                          color: Color(0xFF46494D)),
...
                                        borderRadius:
                                            BorderRadius.circular(32.0),
                                      ),
                                    ),
                                  ),
                                  ElevatedButton(
                                    key: Key('DisConfirmlogout'),
                                    child: Text(
                                      "لا",
                                      style: TextStyle(
                                          fontFamily: 'Poppins',
                                          fontWeight: FontWeight.w600,
                                          color: Color(0xFF46494D)),
...
