...
                            ),
                          ),
                          Padding(
                              padding: const EdgeInsetsDirectional.fromSTEB(
                                  0, 90, 0, 0),
                              child: ElevatedButton(
                                key: Key('reportButton'),
                                style: ElevatedButton.styleFrom(
                                  onPrimary: Colors.black87,
                                  primary: const Color(0xFFEB6666),
                                  fixedSize: const Size(200, 50),
                                  padding: const EdgeInsets.symmetric(
                                      horizontal: 16),
...
                            child: ListView(
                              scrollDirection: Axis.horizontal,
                              children: [
                                Padding(
                                  padding: const EdgeInsets.all(8.0),
                                  child: InkWell(
                                    key: Key('contact'),
                                    onTap: () {
                                      Navigator.push(
                                          context,
                                          MaterialPageRoute(
                                              builder: (c) =>
                                                  ContactWithNajem()));
...
                                    ),
                                  ),
                                ),
                                Padding(
                                  padding: const EdgeInsets.all(8.0),
                                  child: InkWell(
                                    key: Key('guidelines'),
                                    onTap: () {
                                      Navigator.push(
                                          context,
                                          MaterialPageRoute(
                                              builder: (c) =>
                                                  const guidelines()));
...
                                    ),
                                  ),
                                ),
                                Padding(
                                  padding: const EdgeInsets.all(8.0),
                                  child: InkWell(
                                    key: Key('viewAccidents'),
                                    onTap: () {
                                      Navigator.push(
                                          context,
                                          MaterialPageRoute(
                                              builder: (c) =>
                                                  ViewAccidentsWidget()));
...
