...
                                  color: Color(0xFF46494D),
                                )),
                          ]),
                        ),
                      ),
                      TextFormField(
                        key: Key('IDField'),
                        controller: didTextEditingController,
                        keyboardType: TextInputType.number,
                        validator: (value) => IDFieldValidator.validate(value!),
                        style: const TextStyle(color: Colors.black),
                        decoration: const InputDecoration(
                          filled: true,
...
                                  color: Color(0xFF46494D),
                                )),
                          ]),
                        ),
                      ),
                      TextFormField(
                        key: Key('passField'),
                        controller: passwordTextEditingController,
                        keyboardType: TextInputType.text,
                        obscureText: ishiddenPassword,
                        onFieldSubmitted: (value) {
                          loginDriverNow();
                        },
...
                        height: 20,
                      ),
                      SizedBox(
                        height: 20,
                      ),
                      ElevatedButton(
                        key: Key('signInButton'),
                        onPressed: () {
                          if (formKey.currentState!.validate()) validateForm();
                        },
                        style: ElevatedButton.styleFrom(
                          primary: const Color(0xFF85BBC2),
                        ),
...
