...
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    ButtonTheme(
                      minWidth: 25.0,
                      height: 25.0,
                      child: ElevatedButton(
                          key: Key('OkButton'),
                          child: Text('حسنا',
                              style: TextStyle(color: Colors.white)),
                          onPressed: () {
                            Navigator.of(context).pop();
                          },
                          style: ButtonStyle(
...
                        ),
                      ),
                    ),
                    Padding(
                      padding: EdgeInsetsDirectional.fromSTEB(30, 10, 30, 0),
                      child: TextFormField(
                        key: Key('enterManuallyField'),
                        controller: textController,
                        obscureText: false,
                        decoration: InputDecoration(
                          enabledBorder: OutlineInputBorder(
                            borderSide: BorderSide(
                              color: Color(0x00000000),
...
                        crossAxisAlignment: CrossAxisAlignment.center,
                        children: [
                          Padding(
                            padding:
                                EdgeInsetsDirectional.fromSTEB(0, 50, 0, 0),
                            child: ElevatedButton(
                              key: Key('enterManuallyButton'),
                              style: ElevatedButton.styleFrom(
                                onPrimary: Colors.black87,
                                primary: Color(0xFF85BBC2),
                                fixedSize: Size(200, 50),
                                padding: EdgeInsets.symmetric(horizontal: 16),
                                shape: const RoundedRectangleBorder(
...
